--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-POSTGRES_HOST=
-POSTGRES_PORT=
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_SYNC=false # Enable to sync the database on startup (Only for development)
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=submission
+POSTGRES_USER=app
+POSTGRES_PASSWORD=app
+POSTGRES_SYNC=true # Enable to sync the database on startup (Only for development)
