--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Default values to connect to the docker-compose postgres
+# Simply copy this file to .env
+# Run 'docker-compose up --build -d
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=submission
